tests/compile/command_modules/mesh_shading.stderr
In file included from mesh_shading.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:9:
commands.hpp:116:17: error: static assertion failed: command recording has unresolved dependencies
  116 |                 static_assert(false, norm.second);
      |                               ^~~~~
mesh_shading.cpp:110:3: note: in instantiation of function template specialization 'rcgp::operator|<rcgp::NormalEntry<norm_entry{{1, &params, 0}, 1, {{0, 0}, {0, 0}}}>, rcgp::DependencySentinel>' requested here
  110 |                 | draw_mesh_tasks(1);
      |                 ^
1 error generated.
